--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
       color: #f00;
     }
 
+    html, body {
+      margin: 0;
+      padding: 0;
+    }
+
+/* HERO STYLES */
+
+    .full-hero {
+      background-color: #c7dbfc;
+      height: 50vh;
+    }
+
+    .hero-home {
+
+    }
+
 /* SOCIAL LINK STYLES */
 
     .social-link {
@@ -25,8 +41,8 @@
 
     .bio-box {
       border: 1px solid black;
-      width: 50%;
       font-size: 1rem;
+      width: 50%;
 
     .bio-box h3 {
       font-size: 1.5em;
@@ -36,12 +52,15 @@
       font-size: 1em;
     }
 
-    .bio-copy a {
+    .bio-copy > a {
       color: green;
     }
   </style>
 </head>
 <body>
+  <div class="full-hero hero-home">
+
+  </div>
   <h1>I'm an h1</h1>
   <ul>
     <li><a href="http://example.com/">Link</a></li>
