--- a/new.html
+++ b/new.html
@@ -21,7 +21,8 @@
   <h2>Lorem ipsum</h2>
   <div class="card">
     <div class="card-heading">
-      <h2>This is an h2</h2>
+      <img src="http://placekitten.com/g/400/400">
+      <h3>This is an h3</h3>
     </div>
     <div class="card-text">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -33,12 +34,13 @@
       </p>
     </div>
     <div class="card-social-link">
-      <a href="https://www.yahoo.com">Social</a>
+      <a href="https://www.yahoo.com">FB</a>
     </div>
   </div>
   <div class="card">
     <div class="card-heading">
-      <h2>This is an h2</h2>
+      <img src="http://placekitten.com/g/400/400">
+      <h3>This is an h3</h3>
     </div>
     <div class="card-text">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -50,12 +52,13 @@
       </p>
     </div>
     <div class="card-social-link">
-      <a href="https://www.yahoo.com">Social</a>
+      <a href="https://www.yahoo.com">IG</a>
     </div>
   </div>
   <div class="card">
     <div class="card-heading">
-      <h2>This is an h2</h2>
+      <img src="http://placekitten.com/g/400/400">
+      <h3>This is an h3</h3>
     </div>
     <div class="card-text">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -67,12 +70,13 @@
       </p>
     </div>
     <div class="card-social-link">
-      <a href="https://www.yahoo.com">Social</a>
+      <a href="https://www.yahoo.com">Tw</a>
     </div>
   </div>
   <div class="card">
     <div class="card-heading">
-      <h2>This is an h2</h2>
+      <img src="http://placekitten.com/g/400/400">
+      <h3>This is an h3</h3>
     </div>
     <div class="card-text">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -84,7 +88,7 @@
       </p>
     </div>
     <div class="card-social-link">
-      <a href="https://www.yahoo.com">Social</a>
+      <a href="https://www.yahoo.com">FB</a>
     </div>
   </div>
 </div>
